# organic-synthesis-ai

./: .gitignore  README.md  config.properties  download.sh  main.py  pyproject.toml  test_api.py
conditions/: main.py
reactions/: config.properties
retrosyn/: .eslintrc.cjs  .gitignore  LICENSE  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  test.db  test.db-shm  test.db-wal  tsconfig.node.json
retrosyn/src/main/: db.ts  index.ts  model.ts  service.ts
retrosyn/src/preload/: index.d.ts  index.ts
retrosyn/src/renderer/: index.html
retrosyn/src/renderer/src/: App.tsx  main.tsx  theme.ts  types.ts
retrosyn/src/renderer/src/components/: Board.tsx  Chart.tsx  ChemEditor.tsx  Condition.tsx  ConditionDetail.tsx  ConditionList.tsx  DataTable.tsx  LinePlot.tsx  NodeDetail.tsx  Reaction.tsx  ReactionList.tsx  SampleTable.tsx  Search.tsx  SingleEntry.tsx
retrosyn/src/renderer/src/components/node/: ChemNode.tsx  ReactionNode.tsx
retrosyn/src/renderer/src/hooks/: useBoard.ts  usePagination.ts
retrosyn/src/renderer/src/layout/: LeftBar.tsx  MainLayout.tsx  NavBar.tsx
retrosyn/src/renderer/src/pages/: Help.tsx  HistoryPage.tsx  HomePage.tsx  Setting.tsx  SingleHistory.tsx
retrosyn/src/renderer/src/route/: MainRoutes.tsx  index.ts
retrosyn/src/renderer/src/style/: flow.css
retrosyn/src/renderer/src/util/: api.ts
